# mesh-deformation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: references.bib  report.tex
models/: arrow.off  scaleMesh.off
shaders/: ColorShader_fs.glsl  ColorShader_vs.glsl
src/: HandleMesh.cpp  HandleMesh.hpp  ModifierHandle.cpp  ModifierHandle.hpp  SurfaceColorMesh.cpp  SurfaceColorMesh.hpp  VertexSelectionViewer.cpp  VertexSelectionViewer.hpp  main.cpp
src/algorithms/: Deformation.cpp  Deformation.hpp  Intersection.cpp  Intersection.hpp  deformation.cpp  deformation.hpp  intersection.cpp  intersection.hpp
src/utils/: Octree.hpp  PlaneGen.cpp  blockalloc.hpp  octree.hpp  planegen.cpp  planegen.hpp  validation.hpp
